--- a/planetary_diversity_ascension_worlds/localisation/planetarydiversity_aw_tree_of_life_l_english.yml
+++ b/planetary_diversity_ascension_worlds/localisation/planetarydiversity_aw_tree_of_life_l_english.yml
@@ -20,7 +20,7 @@
 
 #Planets
  pc_pd_megaflora_hive:0 "Megaflora Hive World"
- pc_pd_megaflora_hive_desc:0 "Rocky world with a nitrogen-oxygen atmosphere, densely forested with a strong and healthy hydro-sphere. This planet is home to a megaflora tree covering its surface, psionically connected with the Hive Mind that nurtures it."
+ pc_pd_megaflora_hive_desc:0 "Rocky world with a nitrogen-oxygen atmosphere, this world is densely forested with a strong and healthy hydro-sphere. Home to a megaflora tree covering its surface and psionically connected with the Hive Mind that nurtures it, this planet's root system is also the hive's primary form of construction and housing. While its process is slow, its regenerative qualities make it easy to defend and repair."
  trait_pc_pd_megaflora_hive_preference:0 "Megaflora Hive Preference"
  trait_pc_pd_megaflora_hive_preference_desc:1 "$trait_pc_arctic_preference_desc$"
  pc_pd_megaflora_hive_habitability:0 "Megaflora Hive Habitability"
@@ -32,17 +32,9 @@
  pc_pd_megaflora_hive_bloomed_habitability:0 "Megaflora Hive Habitability"
  mod_pc_pd_megaflora_hive_bloomed_habitability:0 "Megaflora Hive Habitability"
 
-#Districts
- district_megaflora_hive: "Megaflora Root District"
- district_megaflora_hive_plural:0 "egaflora Root Districts"
- district_megaflora_hive_desc: "These towering root structures are where the drones gather when not working to rejuvenate and consume nutrients."
- district_megaflora_industrial:0 "Megaflora Industrial District"
- district_megaflora_industrial_plural:0 "Megaflora Industrial Districts"
- district_megaflora_industrial_desc:0 "Root based smelting facilities and factories fill this district, creating advanced products out of raw materials."
-
 #Start Text
- START_SCREEN_PD_TREE_OF_LIFE: "When we awoke, we served the Tree, and the Tree served us. We care for the Tree, we feed the Tree, we protect the Tree, and the Tree nurtures us. For the Tree's sake, we spread out over [GetHomeWorldName], planting and watching offshoots of the Tree wherever we went.\n\nOur world has served the Tree for centuries, and yet we fear the Tree is not entirely safe as we have learned about the dangers of the universe. We have long known this is not the only planet; the galaxy has many Treeless worlds, and we yearn to change this.\n\nWe must protect the Tree. The Tree must spread. The Tree must Grow."
+ START_SCREEN_PD_TREE_OF_LIFE: "When we awoke, we served the Tree, and the Tree served us. We care for the Tree, we feed the Tree, we protect the Tree, and the Tree nurtures us. For the Tree's sake, we spread out over [GetHomeWorldName], planting and watching offshoots of the Tree wherever we went.\n\nOur world has served the Tree for centuries, and yet we fear the Tree is not entirely safe as we have learned about the dangers of the universe. We have long known this is not the only planet; the galaxy has many Treeless worlds, and we yearn to change this.\n\nWe must protect the Tree. The Tree must spread. The Tree must grow."
 
 #Modifiers 
- pd_tree_of_life: "Megaflora Tree World"
- pd_tree_of_life_desc: "This planet's root system is also the hive's primary form of construction and housing. While its process is slow, its regenerative qualities make it easy to defend and repair."
+ pd_tree_of_life_bloomed: "Bloomed Megaflora World"
+ pd_tree_of_life_bloomed_desc: "TODO HAIG"
