VD fix and TOL work

--- a/planetary_diversity_ascension_worlds/localisation/planetarydiversity_aw_tree_of_life_l_english.yml
+++ b/planetary_diversity_ascension_worlds/localisation/planetarydiversity_aw_tree_of_life_l_english.yml
@@ -17,6 +17,8 @@
  d_pd_tree_of_life_colony_desc:0 "An offshoot of the Great Tree, transplanted here by the Hive. It will take time for it to fully mature."
  d_pd_tree_of_life_bloomed:0 "Bloomed Tree of Life"
  d_pd_tree_of_life_bloomed_desc:0 "The Great Tree has sheltered and supported the Hive for untold generations. Now in bloom, its beneficial effects can be felt by every drone."
+ d_pd_tree_of_life_habitat: "Tree of Life Habitat"
+ d_pd_tree_of_life_habitat_desc: "TODO HAIG"
 
 #Planets
  pc_pd_megaflora_hive:0 "Megaflora Hive World"
