--- a/planetary_diversity_ascension_worlds/localisation/planetarydiversity_aw_tree_of_life_l_english.yml
+++ b/planetary_diversity_ascension_worlds/localisation/planetarydiversity_aw_tree_of_life_l_english.yml
@@ -12,13 +12,15 @@
 
 #Deposits
  d_pd_tree_of_life_home:0 "Tree of Life"
- d_pd_tree_of_life_home_desc:0 "The Great Tree has sheltered and supported the Hive for untold generations."
+ d_pd_tree_of_life_home_desc:0 "The Tree of Life has sheltered and supported the Hive for untold generations."
  d_pd_tree_of_life_colony:0 "Tree of Life Sapling"
  d_pd_tree_of_life_colony_desc:0 "An offshoot of the Great Tree, transplanted here by the Hive. It will take time for it to fully mature."
  d_pd_tree_of_life_bloomed:0 "Bloomed Tree of Life"
  d_pd_tree_of_life_bloomed_desc:0 "The Great Tree has sheltered and supported the Hive for untold generations. Now in bloom, its beneficial effects can be felt by every drone."
  d_pd_tree_of_life_habitat: "Tree of Life Habitat"
  d_pd_tree_of_life_habitat_desc: "TODO HAIG"
+ d_pd_tree_of_life_ringworld: "Tree of Life Ringworld"
+ d_pd_tree_of_life_ringworld_desc: "TODO HAIG"
 
 #Planets
  pc_pd_megaflora_hive:0 "Megaflora Hive World"
@@ -38,5 +40,11 @@
  START_SCREEN_PD_TREE_OF_LIFE: "When we awoke, we served the Tree, and the Tree served us. We care for the Tree, we feed the Tree, we protect the Tree, and the Tree nurtures us. For the Tree's sake, we spread out over [GetHomeWorldName], planting and watching offshoots of the Tree wherever we went.\n\nOur world has served the Tree for centuries, and yet we fear the Tree is not entirely safe as we have learned about the dangers of the universe. We have long known this is not the only planet; the galaxy has many Treeless worlds, and we yearn to change this.\n\nWe must protect the Tree. The Tree must spread. The Tree must grow."
 
 #Modifiers 
- pd_tree_of_life_bloomed: "Bloomed Megaflora World"
- pd_tree_of_life_bloomed_desc: "TODO HAIG"
+ pd_tree_of_life_bloomed: "Bloomed Tree of Life World"
+ pd_tree_of_life_bloomed_desc: "TODO GATEMAN"
+ pd_tree_of_life_growing: "Growing Tree of Life Sapling"
+ pd_tree_of_life_growing_desc: "TODO GATEMAN"
+ pd_tree_of_life_home: "Tree of Life World"
+ pd_tree_of_life_home_desc: "TODO GATEMAN"
+ d_pd_tree_of_life_ringarc: "Tree of Life Ringworld"
+ d_pd_tree_of_life_ringarc_desc: "TODO GATEMAN"
