--- a/planetary_diversity_ascension_worlds/localisation/planetarydiversity_aw_tree_of_life_l_english.yml
+++ b/planetary_diversity_ascension_worlds/localisation/planetarydiversity_aw_tree_of_life_l_english.yml
@@ -48,3 +48,17 @@
  pd_tree_of_life_home_desc: "TODO GATEMAN"
  d_pd_tree_of_life_ringarc: "Tree of Life Ringworld"
  d_pd_tree_of_life_ringarc_desc: "TODO GATEMAN"
+ pd_no_lifetree: "No Tree of Life"
+ pd_no_lifetree_desc: "TODO GATEMAN"
+
+#Decisions
+ decision_pd_replant_aw_tree_of_life: "Replant Tree of Life Sapling"
+ decision_pd_replant_aw_tree_of_life_desc: "TODO GATEMAN"
+ decision_pd_aw_bloom_tree_of_life: "Bloom Tree of Life"
+ decision_pd_aw_bloom_tree_of_life_desc: "TODO GATEMAN"
+
+#Ascension Perk
+ ap_pd_tree_of_life_bloomed: "Bloomed Megaflora Hive Worlds"
+ ap_pd_tree_of_life_bloomed_desc: "TODO GATEMAN"
+ allow_tree_of_life_bloomed:0 "§HUnlocks Decisions Option:§! for Bloomed Megaflora Hive Worlds TODO GATEMAN"
+ describe_tree_of_life_bloomed_worlds:0 "§YBloomed Megaflora Hive Worlds§! are specialized §YMegaflora Hive Worlds§! which double the amount of jobs in districts. TODO GATEMAN"
