--- a/planetary_diversity_ascension_worlds/localisation/planetarydiversity_aw_tree_of_life_l_english.yml
+++ b/planetary_diversity_ascension_worlds/localisation/planetarydiversity_aw_tree_of_life_l_english.yml
@@ -3,7 +3,7 @@
 #Origin
  origin_pd_aw_tree_of_life: "Megaflora Tree of Life"
  origin_pd_aw_tree_of_life_desc:0 "This Hive evolved in a symbiotic relationship with a vast megaflora tree whose roots have spread to every corner of the planet and changed the ecosystem to suit both it and the drones. The hive would be hard-pressed to survive without the support of the tree."
- origin_tooltip_pd_aw_tree_of_life_start_effects:0 "- $HOMEWORLD$$TABBED_NEW_LINE$- ['concept_pd_aw_tree_of_life']$TABBED_NEW_LINE$- ['concept_pd_aw_tree_of_life_class']$NEW_LINE$- Colonized Planets: ['concept_pd_aw_tree_of_life_sapling'] Planetary Feature$NEW_LINE$- Colonies without the §YTree of Life Sapling§!: ['concept_transplant_pd_aw_tree_of_life'] Planetary Decision$NEW_LINE$- $AVAILABLE_HOLDINGS$ ['concept_pd_aw_tree_of_life_holding', £building£ $holding_tree_of_life_sapling$] on Subject colonies"
+ origin_tooltip_pd_aw_tree_of_life_start_effects:0 "- $HOMEWORLD$$TABBED_NEW_LINE$- ['concept_pd_aw_tree_of_life']$TABBED_NEW_LINE$- ['concept_pd_aw_tree_of_life_class']$NEW_LINE$- Colonized Planets: ['concept_pd_aw_tree_of_life_sapling'] Planetary Feature$NEW_LINE$- Colonies without the §YTree of Life Sapling§!: ['concept_transplant_pd_aw_tree_of_life'] Planetary Decision$NEW_LINE$- $AVAILABLE_HOLDINGS$ ['concept_pd_aw_tree_of_life_holding', £building£ $holding_tree_of_life_sapling$] on Subject colonies"
   origin_tooltip_pd_aw_tree_of_life_start_negative_effects: "- Cannot terraform plants"
  
 #Concepts
@@ -14,13 +14,13 @@
  d_pd_tree_of_life_home:0 "Tree of Life"
  d_pd_tree_of_life_home_desc:0 "The Tree of Life has sheltered and supported the Hive for untold generations."
  d_pd_tree_of_life_colony:0 "Tree of Life Sapling"
- d_pd_tree_of_life_colony_desc:0 "An offshoot of the Great Tree, transplanted here by the Hive. It will take time for it to fully mature."
+ d_pd_tree_of_life_colony_desc:0 "An offshoot of the Great Tree, transplanted here by the Hive. It will take time for it to mature fully."
  d_pd_tree_of_life_bloomed:0 "Bloomed Tree of Life"
  d_pd_tree_of_life_bloomed_desc:0 "The Great Tree has sheltered and supported the Hive for untold generations. Now in bloom, its beneficial effects can be felt by every drone."
  d_pd_tree_of_life_habitat: "Tree of Life Habitat"
- d_pd_tree_of_life_habitat_desc: "TODO HAIG"
+ d_pd_tree_of_life_habitat_desc: "An offshoot of the Great Tree, transplanted here by the Hive. This miniature version within this habitat will never grow to its full potential but will support the drones stationed here."
  d_pd_tree_of_life_ringworld: "Tree of Life Ringworld"
- d_pd_tree_of_life_ringworld_desc: "TODO HAIG"
+ d_pd_tree_of_life_ringworld_desc: "An offshoot of the Great Tree, transplanted here by the Hive. While able to grow along the surface of the ringworld, the soil depth would need to be more extensive for the tree to reach full size."
 
 #Planets
  pc_pd_megaflora_hive:0 "Megaflora Hive World"
@@ -41,24 +41,32 @@
 
 #Modifiers 
  pd_tree_of_life_bloomed: "Bloomed Tree of Life World"
- pd_tree_of_life_bloomed_desc: "TODO GATEMAN"
+ pd_tree_of_life_bloomed_desc: "The Great Tree on this planet has fully matured and is in bloom. Its enormous root system provides space for extra worker drones and withstands considerable damage."
  pd_tree_of_life_growing: "Growing Tree of Life Sapling"
- pd_tree_of_life_growing_desc: "TODO GATEMAN"
+ pd_tree_of_life_growing_desc: "The drones of this planet are focused on establishing the Great Tree sapling we have planted here."
  pd_tree_of_life_home: "Tree of Life World"
- pd_tree_of_life_home_desc: "TODO GATEMAN"
+ pd_tree_of_life_home_desc: "The Great Tree on this planet is fully grown. Its root system provides space for worker drones and naturally withstands damage."
  d_pd_tree_of_life_ringarc: "Tree of Life Ringworld"
- d_pd_tree_of_life_ringarc_desc: "TODO GATEMAN"
+ d_pd_tree_of_life_ringarc_desc: "The Great Tree on this ringworld is fully grown. Its root system provides space for worker drones and naturally withstands damage. It will only be able to develop partially."
  pd_no_lifetree: "No Tree of Life"
- pd_no_lifetree_desc: "TODO GATEMAN"
+ pd_no_lifetree_desc: "Without a Great Tree of Life, the hive is incomplete."
+ pd_no_lifetree_arcology: "No Tree of Life"
+ pd_no_lifetree_arcology_desc: "This planet is covered in endless urban sprawl, making its soil unable to sustain a Tree of Life."
 
 #Decisions
- decision_pd_replant_aw_tree_of_life: "Replant Tree of Life Sapling"
- decision_pd_replant_aw_tree_of_life_desc: "TODO GATEMAN"
+ decision_pd_replant_aw_tree_of_life: "Replant Tree of Life"
+ decision_pd_replant_aw_tree_of_life_desc: "We must establish a network of Trees here for our Hive to flourish."
  decision_pd_aw_bloom_tree_of_life: "Bloom Tree of Life"
- decision_pd_aw_bloom_tree_of_life_desc: "TODO GATEMAN"
+ decision_pd_aw_bloom_tree_of_life_desc: "Encouraging a Great Tree of Life to bloom takes considerable time and resources, but doing so will turn the entire planet into a paradise for the hive."
+ decision_pd_aw_bloom_tree_of_life_tooltip: "This planet will be grown into a §YBloomed $pc_pd_megaflora_hive_bloomed$§!.\n\nDoubling the £pop£ §YJobs§! and £housing£ §YHousing§! each district will provide."
 
 #Ascension Perk
  ap_pd_tree_of_life_bloomed: "Bloomed Megaflora Hive Worlds"
- ap_pd_tree_of_life_bloomed_desc: "TODO GATEMAN"
- allow_tree_of_life_bloomed:0 "§HUnlocks Decisions Option:§! for Bloomed Megaflora Hive Worlds TODO GATEMAN"
- describe_tree_of_life_bloomed_worlds:0 "§YBloomed Megaflora Hive Worlds§! are specialized §YMegaflora Hive Worlds§! which double the amount of jobs in districts. TODO GATEMAN"
+ ap_pd_tree_of_life_bloomed_desc: "We can encourage the Great Tree of Life to bloom on each planet, unlocking their true potential."
+ allow_tree_of_life_bloomed:0 "§HUnlocks Decision:§! $decision_pd_aw_bloom_tree_of_life$"
+ describe_tree_of_life_bloomed_worlds:0 "§YBloomed $pc_pd_megaflora_hive_bloomed$s§! are special planet-class that are uninhabitable for non-Hive Minded Pops, but are not limited in how many £district£ §YGenerator§!, §YMining§! and §YAgriculture Districts§! they can support. All districts have thier £pop£ §YJobs§! and £housing£ §YHousing§! doubled. £pop£ §YPops§! living on §YBloomed $pc_pd_megaflora_hive_bloomed$§! have their §YResource Output§! increased by §G+10%§!"
+
+#Holdings
+ holding_pd_aw_tree_of_life_sapling: "Megaflora Tree of Life Sprout"
+ holding_pd_aw_tree_of_life_sapling_desc: "The Overlord has existed with their Megaflora Tree of Life for so long that they can no longer imagine life without it. Now, they want to share the same opportunity with their vassals."
+
