TOL pre test script

--- a/planetary_diversity_ascension_worlds/localisation/planetarydiversity_aw_tree_of_life_l_english.yml
+++ b/planetary_diversity_ascension_worlds/localisation/planetarydiversity_aw_tree_of_life_l_english.yml
@@ -11,12 +11,12 @@
  concept_pd_aw_tree_of_life_desc: "- $MOD_POP_GROWTH_SPEED$: §G+15%§!\n- $mod_planet_jobs_society_research_produces_mult$: §G+10%§!\n- $MOD_PLANET_HOUSING_ADD$: §G+10§!\n- $mod_district_farming_max$: §G+4§!\n- Upkeep: 4 $i_food$\n\n§L$d_tree_of_life_home_desc$§!"
 
 #Deposits
- d_pd_tree_of_life_home:0 "Tree of Life"
- d_pd_tree_of_life_home_desc:0 "The Tree of Life has sheltered and supported the Hive for untold generations."
- d_pd_tree_of_life_colony:0 "Tree of Life Sapling"
- d_pd_tree_of_life_colony_desc:0 "An offshoot of the Great Tree, transplanted here by the Hive. It will take time for it to mature fully."
- d_pd_tree_of_life_bloomed:0 "Bloomed Tree of Life"
- d_pd_tree_of_life_bloomed_desc:0 "The Great Tree has sheltered and supported the Hive for untold generations. Now in bloom, its beneficial effects can be felt by every drone."
+ d_pd_aw_tree_of_life_home:0 "Tree of Life"
+ d_pd_aw_tree_of_life_home_desc:0 "The Tree of Life has sheltered and supported the Hive for untold generations."
+ d_pd_aw_tree_of_life_colony:0 "Tree of Life Sapling"
+ d_pd_aw_tree_of_life_colony_desc:0 "An offshoot of the Great Tree, transplanted here by the Hive. It will take time for it to mature fully."
+ d_pd_aw_tree_of_life_bloomed:0 "Bloomed Tree of Life"
+ d_pd_aw_tree_of_life_bloomed_desc:0 "The Great Tree has sheltered and supported the Hive for untold generations. Now in bloom, its beneficial effects can be felt by every drone."
  d_pd_tree_of_life_habitat: "Tree of Life Habitat"
  d_pd_tree_of_life_habitat_desc: "An offshoot of the Great Tree, transplanted here by the Hive. This miniature version within this habitat will never grow to its full potential but will support the drones stationed here."
  d_pd_tree_of_life_ringworld: "Tree of Life Ringworld"
@@ -40,16 +40,16 @@
  START_SCREEN_PD_TREE_OF_LIFE: "When we awoke, we served the Tree, and the Tree served us. We care for the Tree, we feed the Tree, we protect the Tree, and the Tree nurtures us. For the Tree's sake, we spread out over [GetHomeWorldName], planting and watching offshoots of the Tree wherever we went.\n\nOur world has served the Tree for centuries, and yet we fear the Tree is not entirely safe as we have learned about the dangers of the universe. We have long known this is not the only planet; the galaxy has many Treeless worlds, and we yearn to change this.\n\nWe must protect the Tree. The Tree must spread. The Tree must grow."
 
 #Modifiers 
- pd_tree_of_life_bloomed: "Bloomed Tree of Life World"
- pd_tree_of_life_bloomed_desc: "The Great Tree on this planet has fully matured and is in bloom. Its enormous root system provides space for extra worker drones and can withstand considerable damage."
- pd_tree_of_life_growing: "Growing Tree of Life Sapling"
- pd_tree_of_life_growing_desc: "The drones of this planet are focused on establishing the Great Tree sapling we have planted here."
- pd_tree_of_life_home: "Tree of Life World"
- pd_tree_of_life_home_desc: "The Great Tree on this planet is fully grown. Its root system provides space for worker drones and naturally withstands damage."
+ pd_aw_tree_of_life_bloomed: "Bloomed Tree of Life World"
+ pd_aw_tree_of_life_bloomed: "The Great Tree on this planet has fully matured and is in bloom. Its enormous root system provides space for extra worker drones and can withstand considerable damage."
+ pd_aw_tree_of_life_growing: "Growing Tree of Life Sapling"
+ pd_aw_tree_of_life_growing_desc: "The drones of this planet are focused on establishing the Great Tree sapling we have planted here."
+ pd_aw_tree_of_life_home: "Tree of Life World"
+ pd_aw_tree_of_life_home_desc: "The Great Tree on this planet is fully grown. Its root system provides space for worker drones and naturally withstands damage."
  d_pd_tree_of_life_ringarc: "Tree of Life Ringworld"
  d_pd_tree_of_life_ringarc_desc: "The Great Tree on this ringworld is as fully grown as possible. Its root system provides space for worker drones and naturally withstands damage. "
- pd_no_lifetree: "No Tree of Life"
- pd_no_lifetree_desc: "Without a Great Tree of Life, the hive is incomplete."
+ pd_aw_no_lifetree: "No Tree of Life"
+ pd_aw_no_lifetree_desc: "Without a Great Tree of Life, the hive is incomplete."
  pd_no_lifetree_arcology: "No Tree of Life"
  pd_no_lifetree_arcology_desc: "This planet is covered in endless urban sprawl, making it unsuitable to sustain a Tree of Life."
 
