--- a/planetary_diversity_ascension_worlds/localisation/planetarydiversity_aw_tree_of_life_l_english.yml
+++ b/planetary_diversity_ascension_worlds/localisation/planetarydiversity_aw_tree_of_life_l_english.yml
@@ -3,7 +3,7 @@
 #Origin
  origin_pd_aw_tree_of_life: "Megaflora Tree of Life"
  origin_pd_aw_tree_of_life_desc:0 "This Hive evolved in a symbiotic relationship with a vast megaflora tree whose roots have spread to every corner of the planet and changed the ecosystem to suit both it and the drones. The hive would be hard-pressed to survive without the support of the tree."
- origin_tooltip_pd_aw_tree_of_life_start_effects:0 "- $HOMEWORLD$$TABBED_NEW_LINE$- ['concept_pd_aw_tree_of_life']$TABBED_NEW_LINE$- ['concept_pd_aw_tree_of_life_class']$NEW_LINE$- Colonized Planets: ['concept_pd_aw_tree_of_life_sapling'] Planetary Feature$NEW_LINE$- Colonies without the §YTree of Life Sapling§!: ['concept_transplant_pd_aw_tree_of_life'] Planetary Decision$NEW_LINE$- $AVAILABLE_HOLDINGS$ ['concept_pd_aw_tree_of_life_holding', £building£ $holding_tree_of_life_sapling$] on Subject colonies"
+ origin_tooltip_pd_aw_tree_of_life_start_effects:0 "- $HOMEWORLD$$TABBED_NEW_LINE$- ['concept_tree_of_life']$TABBED_NEW_LINE$- ['concept_pd_aw_tree_of_life_class']$NEW_LINE$- Colonized Planets: ['concept_pd_aw_tree_of_life_sapling'] Planetary Feature$NEW_LINE$- Colonies without the §YTree of Life Sapling§!: ['concept_transplant_pd_aw_tree_of_life'] Planetary Decision$NEW_LINE$- $AVAILABLE_HOLDINGS$ ['concept_pd_aw_tree_of_life_holding', £building£ $holding_tree_of_life_sapling$] on Subject colonies"
   origin_tooltip_pd_aw_tree_of_life_start_negative_effects: "- Cannot terraform planets"
  
 #Concepts
