aquatic worlds work

--- a/planetary_diversity_ascension_worlds/localisation/planetarydiversity_aw_l_english.yml
+++ b/planetary_diversity_ascension_worlds/localisation/planetarydiversity_aw_l_english.yml
@@ -1,5 +1,12 @@
 ﻿l_english:
 
 #Terraforming Warning
-pd_planet_no_terraform: "$TRIGGER_FAIL$ This planet cannot be terraformed with standard procedures." 
+ pd_planet_no_terraform: "$TRIGGER_FAIL$ This planet cannot be terraformed with standard procedures." 
 
+#Flooded/Aquatic Planets
+ decision_flood_planet: "Flood Planet"
+ decision_flood_planet_desc: "This oceanic planet has the potential to be an ideal home for our people. By adjusting sea levels and moving cities underwater, we can ensure that life flourishes for those adapted to live beneath the waves."
+ decision_flood_planet_tooltip: "Ice will be harvested from a systems with an §Y$sm_ice_mining_station$§!\n§Y$pd_aw_flooded_planet$§! modifer added:\n$flooded_planet_tooltip$"
+ pd_aw_flooded_planet: "Flooded Planet"
+ pd_aw_flooded_planet_desc: "This oceanic planet is an ideal home for aquatic species. Life flourishes for those adapted to live beneath the waves."
+ flooded_planet_tooltip: "$MOD_PLANET_MAX_DISTRICTS_MULT$: §G+20%§!\n$MOD_POP_GROWTH_SPEED$: §G+10%§!\n$mod_planet_jobs_produces_mult$: §G+5%§!\n§YNon-Aquatic§! Habitability: §R-20%§!"
