--- a/planetary_diversity_ascension_worlds/localisation/planetarydiversity_aw_wasteland_l_english copy.yml
+++ b/planetary_diversity_ascension_worlds/localisation/planetarydiversity_aw_wasteland_l_english copy.yml
@@ -19,7 +19,7 @@
  pd_aw_wasteland_planet: "Industrial Wasteland"
  pd_aw_wasteland_planet_desc: "$decision_pd_aw_wasteland_planet_desc$"
  pd_aw_wasteland_planet_tooltip: "Unlocks £district£ §YGenerator Districts§! and §YMining District§!\nBlocks all §YAgriculture Districts§!"
- pd_wasteland_planet: "$pd_aw_wasteland_planet$"
+ pd_wasteland_planet: "Industrial Wasteland"
  pd_wasteland_planet_desc: "$pd_aw_wasteland_planet_desc$"
  pd_wasteland_planet_tooltip: "$pd_aw_wasteland_planet_tooltip$"
 
