--- a/planetary_diversity_ascension_worlds/localisation/planetarydiversity_aw_flooded_l_english.yml
+++ b/planetary_diversity_ascension_worlds/localisation/planetarydiversity_aw_flooded_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
 
 #Flooded/Aquatic Planets
- decision_pd_aw_flood_planet: "Flood Planet"
+ decision_pd_aw_flood_planet: "Expand Planetary Sea"
  decision_pd_aw_flood_planet_desc: "This oceanic planet has the potential to be an ideal home for our people. By adjusting sea levels and moving cities underwater, we can ensure that life flourishes for those adapted to live beneath the waves."
  decision_pd_aw_flood_planet_tooltip: "Ice will be harvested from a systems with an §Y$sm_ice_mining_station$§!\n§Y$pd_aw_flooded_planet$§! modifer added:\n$pd_aw_flooded_planet_tooltip$"
  flooded_planet_tooltip: "$MOD_PLANET_MAX_DISTRICTS_MULT$: §G+20%§!\n$MOD_POP_GROWTH_SPEED$: §G+10%§!\n$mod_planet_jobs_produces_mult$: §G+5%§!\n§YNon-Aquatic§! Habitability: §R-20%§!"
@@ -14,7 +14,7 @@
  decision_pd_aw_unflood_habitat: "Unflood Habitat"
  decision_pd_aw_unflood_habitat_desc: "This habitat has the potential to be an ideal home for our people. By draining this habitat, we can ensure that life flourishes for those adapted to live above the waves."
  decision_pd_aw_flood_habitat_tooltip: "Habitability: §R-20%§!\nConsidered an §YOcean§! world for §YAquatic§! species.\nIce will be harvested from a system with an §Y$sm_ice_mining_station$§! on the starbase."
- 
+
  flooded_habitat: "Flooded"
  flooded_habitat_desc: "Engulfed by water, this world faithfully mirrors the idyllic environment of aquatic denizens."
  pd_aw_flooded_planet_tooltip: "$MOD_PLANET_MAX_DISTRICTS_MULT$: §G+20%§!\n$MOD_POP_GROWTH_SPEED$: §G+10%§!\n$mod_planet_jobs_produces_mult$: §G+5%§!\n§YNon-Aquatic§! Habitability: §R-20%§!"
@@ -26,3 +26,8 @@
 
  ICE_MINING_PLANET_SUCCESS_TITLE: "Planet Flooded"
  ICE_MINING_PLANET_SUCCESS_DESC: "Using ice mined from the $SYSTEM|Y$ system, we have managed to flood §Y[This.GetName]§!."
+
+ ocean_paradise_2:0 "$ocean_paradise$"
+ ocean_paradise_2_desc:0 "$ocean_paradise_desc$"
+ ocean_paradise_hive_2:0 "$ocean_paradise_hive$"
+ ocean_paradise_hive_2_desc:0 "$ocean_paradise_hive_desc$"
