--- a/planetary_diversity_ascension_worlds/localisation/planetarydiversity_aw_necro_l_english.yml
+++ b/planetary_diversity_ascension_worlds/localisation/planetarydiversity_aw_necro_l_english.yml
@@ -2,7 +2,7 @@
 
 ###Necro Planets
 #Dummy Classes
- DO_NOT_USE: "DUMMY CLASS - DO NOT US"
+ DO_NOT_USE: "DUMMY CLASS - DO NOT USE"
  pc_pd_necro:0 "$DO_NOT_USE$"
  pc_pd_necro_desc:0 "$DO_NOT_USE"
  pc_pd_necro_adj:0 "$DO_NOT_USE"
@@ -10,17 +10,35 @@
  trait_pc_pd_necro_preference:0 "$DO_NOT_USE"
  trait_pc_pd_necro_preference_desc:0 "$DO_NOT_USE"
  pc_pd_necro_:0 "$DO_NOT_USE$"
- pc_pd_necro__desc:0 "$DO_NOT_USE$"
- pc_pd_necro__adj:0 "$DO_NOT_USE$"
- mod_pc_pd_necro__habitability:0 "$DO_NOT_USE$"
- trait_pc_pd_necro__preference:0 "$DO_NOT_USE$"
- trait_pc_pd_necro__preference_desc:0 "$DO_NOT_USE$"
+ pc_pd_necro_desc:0 "$DO_NOT_USE$"
+ pc_pd_necro_adj:0 "$DO_NOT_USE$"
+ mod_pc_pd_necro_habitability:0 "$DO_NOT_USE$"
+ trait_pc_pd_necro_preference:0 "$DO_NOT_USE$"
+ trait_pc_pd_necro_preference_desc:0 "$DO_NOT_USE$"
 
 #Decision
  decision_pd_aw_necro_planet:0 "Build Planetary Necropolis"
- decision_pd_aw_necro_planet_desc:0 "This world yearns to become a sprawling temple and to have its surface echo with the whispers of our legacy of eternal significance."
- pd_aw_necro_planet_tooltip: "This would will become a Necropolis. TODO"
+ decision_pd_aw_necro_planet_desc:0 "This world yearns to become a sprawling temple that echos with the whispers of our legacy of eternal significance."
+ decision_pd_aw_necro_planet_effects_short: "Change planet class to §Y$pc_nuked$§!\n§Y$district_pd_aw_necro$§! modifier added.\nAllows construction of £district£ ['district:district_pd_aw_necro']\nRemoves and blocks construction of £district£ ['district:district_farming']"
 
 #Modifiers
  pd_aw_necro_planet:0 "Necropolis"
- pd_aw_necro_planet_desc:0 "This world is a sprawling temple, its surface echos with the whispers of our legacy of eternal significance."
+ pd_aw_necro_planet_tooltip: "§GUnlocks Construction§!: £district£ ['district:district_pd_aw_necro']\n§RBlocks Construction§!: £district£ ['district:district_farming']\n£unity£ $unity$ from [GetAdministratorPluralWithIcon]: §G+0.5§!\n$MOD_PLANET_ORBITAL_BOMBARDMENT_DAMAGE$ §G-25%§!\n$MOD_POP_GROWTH_SPEED_REDUCTION$ §R10%§!"
+ pd_aw_necro_planet_desc:0 "This world is a sprawling temple, its surface echos with the whispers of eternal significance."
+
+#Acension Perk
+ ap_pd_necro_worlds:0 "Necro Worlds"
+ ap_pd_necro_worlds_desc:0 "Our world yearn to become a sprawling temple that echos with the whispers of our legacy of eternal significance."
+ allow_necro_worlds:0 "§HUnlocks Decision:§! $decision_pd_aw_necro_planet$"
+ describe_necro_worlds:0 "$t$- Unlocks Construction: £district£ ['district:district_pd_aw_necro']\n$t$- Blocks Construction: £district£ ['district:district_farming']\n\nUnlocks the §YPlanet Necrosis Beam§! Colossus Weapon §R(requires §Y$ap_colossus$§! Ascension Perk)§!."
+
+#Necropolis District
+ district_pd_aw_necro:0 "Necropolis District"
+ district_pd_aw_necro_plural:0 "Necropolis Districts"
+ district_pd_aw_necro_desc:0 "A testament to our legacy, these spires may hold the key to our eternal significance."
+
+#Notification Message
+ MESSAGE_PD_AW_NECRO_DESC:1 "$PLANET|Y$ is now a §Y$pd_aw_necro_planet$§."
+ MESSAGE_PD_AW_NECRO_MESSAGE_TYPE_TITLE:0 "Planetary Necropolis Complete"
+ MESSAGE_PD_AW_NECRO_CLEANUP_DESC:1 "The planetary Necropolis on $PLANET|Y$ as been removed."
+ MESSAGE_PD_AW_NECRO_CLEANUP_MESSAGE_TYPE_TITLE:0 "Necropolis Removed"
