--- a/planetary_diversity_ascension_worlds/localisation/planetarydiversity_aw_shroud_l_english.yml
+++ b/planetary_diversity_ascension_worlds/localisation/planetarydiversity_aw_shroud_l_english.yml
@@ -10,7 +10,7 @@
 #Decisions
  decision_pd_aw_shroud_planet:0 "Shroud Phasing"
  decision_pd_aw_shroud_planet_desc:0 "We can weaken the barrier between this planet and the Shroud and create a balance between the material and psionic realms."
- decision_pd_aw_shroud_planet_effects_short: "§Y$pd_aw_shroud_planet$§! modifier added.\n\nIncreases £pop£ §GPsionic Pop Output§! but reducing £pop£ §YNon-Psionic Pop Output§!."
+ decision_pd_aw_shroud_planet_effects_short: "§Y$pd_aw_shroud_planet$§! modifier added.\n\nIncreases £pop£ §GPsionic Pop Output§! but reduces £pop£ §YNon-Psionic Pop Output§!."
  decision_pd_aw_shroud_planet_cleanup: "Phase-Shift Planet"
  decision_pd_aw_shroud_planet_cleanup_desc: "Our physicists can strengthen the barrier between this planet and the Shroud, locking it in the material realm."
  decision_pd_aw_shroud_planet_cleanup_tooltip: "\nWe will remove the psionic influence from this planet."
@@ -22,9 +22,9 @@
  pd_shroud_planet: "$pd_aw_shroud_planet$"
  pd_shroud_planet_desc: "$pd_aw_shroud_planet_desc$"
  pd_shroud_planet_tooltip: "$pd_aw_shroud_planet_tooltip$"
- 
+
 #Notification Message
  MESSAGE_PD_AW_SHROUD_DESC:1 "$PLANET|Y$ is now §Y$pd_aw_shroud_planet$§."
  MESSAGE_PD_AW_SHROUD_MESSAGE_TYPE_TITLE:0 "Planetary Shroud Communion Complete"
- MESSAGE_PD_AW_SHROUD_CLEANUP_DESC:1 "The influence of the Shourd has been revered on $PLANET|Y$."
+ MESSAGE_PD_AW_SHROUD_CLEANUP_DESC:1 "The influence of the Shourd has been removed on $PLANET|Y$."
  MESSAGE_PD_AW_SHROUD_CLEANUP_MESSAGE_TYPE_TITLE:0 "Planet Unshrouded"
