--- a/planetary_diversity_ascension_worlds/localisation/planetarydiversity_aw_necro_l_english.yml
+++ b/planetary_diversity_ascension_worlds/localisation/planetarydiversity_aw_necro_l_english.yml
@@ -3,42 +3,77 @@
 ###Necro Planets
 #Dummy Classes
  DO_NOT_USE: "DUMMY CLASS - DO NOT USE"
- pc_pd_necro:0 "$DO_NOT_USE$"
- pc_pd_necro_desc:0 "$DO_NOT_USE"
- pc_pd_necro_adj:0 "$DO_NOT_USE"
- mod_pc_pd_necro_habitability:0 "$DO_NOT_USE"
- trait_pc_pd_necro_preference:0 "$DO_NOT_USE"
- trait_pc_pd_necro_preference_desc:0 "$DO_NOT_USE"
- pc_pd_necro_:0 "$DO_NOT_USE$"
- pc_pd_necro_desc:0 "$DO_NOT_USE$"
- pc_pd_necro_adj:0 "$DO_NOT_USE$"
- mod_pc_pd_necro_habitability:0 "$DO_NOT_USE$"
- trait_pc_pd_necro_preference:0 "$DO_NOT_USE$"
- trait_pc_pd_necro_preference_desc:0 "$DO_NOT_USE$"
+ pc_pd_necro: "$DO_NOT_USE$"
+ pc_pd_necro_desc: "$DO_NOT_USE"
+ pc_pd_necro_adj: "$DO_NOT_USE"
+ mod_pc_pd_necro_habitability: "$DO_NOT_USE"
+ trait_pc_pd_necro_preference: "$DO_NOT_USE"
+ trait_pc_pd_necro_preference_desc: "$DO_NOT_USE"
+ pc_pd_necro_city: "$DO_NOT_USE$"
+ pc_pd_necro_city_desc: "$DO_NOT_USE$"
+ pc_pd_necro_city_adj: "$DO_NOT_USE$"
+ mod_pc_pd_necro_city_habitability: "$DO_NOT_USE$"
+ trait_pc_pd_necro_city_preference: "$DO_NOT_USE$"
+ trait_pc_pd_necro_city_preference_desc: "$DO_NOT_USE$"
+ pc_pd_necro_shroud: "$DO_NOT_USE$"
+ pc_pd_necro_shroud_desc: "$DO_NOT_USE$"
+ pc_pd_necro_shroud_adj: "$DO_NOT_USE$"
+ mod_pc_pd_necro_shroud_habitability: "$DO_NOT_USE$"
+ trait_pc_pd_necro_shroud_preference: "$DO_NOT_USE$"
+ trait_pc_pd_necro_shroud_preference_desc: "$DO_NOT_USE$"
+ pc_pd_necro_shroud_city: "$DO_NOT_USE$"
+ pc_pd_necro_shroud_city_desc: "$DO_NOT_USE$"
+ pc_pd_necro_shroud_city_adj: "$DO_NOT_USE$"
+ mod_pc_pd_necro_shroud_city_habitability: "$DO_NOT_USE$"
+ trait_pc_pd_necro_shroud_city_preference: "$DO_NOT_USE$"
+ trait_pc_pd_necro_shroud_city_preference_desc: "$DO_NOT_USE$"
+ pc_pd_necro_relic: "$DO_NOT_USE$"
+ pc_pd_necro_relic_desc: "$DO_NOT_USE$"
+ pc_pd_necro_relic_adj: "$DO_NOT_USE$"
+ mod_pc_pd_necro_relic_habitability: "$DO_NOT_USE$"
+ trait_pc_pd_necro_relic_preference: "$DO_NOT_USE$"
+ trait_pc_pd_necro_relic_preference_desc: "$DO_NOT_USE$"
+ pc_pd_necro_shroud_relic: "$DO_NOT_USE$"
+ pc_pd_necro_shroud_relic_desc: "$DO_NOT_USE$"
+ pc_pd_necro_shroud_relic_adj: "$DO_NOT_USE$"
+ mod_pc_pd_necro_shroud_relic_habitability: "$DO_NOT_USE$"
+ trait_pc_pd_necro_shroud_relic_preference: "$DO_NOT_USE$"
+ trait_pc_pd_necro_shroud_relic_preference_desc: "$DO_NOT_USE$"
 
 #Decision
- decision_pd_aw_necro_planet:0 "Build Planetary Necropolis"
- decision_pd_aw_necro_planet_desc:0 "This world yearns to become a sprawling temple that echos with the whispers of our legacy of eternal significance."
- decision_pd_aw_necro_planet_effects_short: "Change planet class to §Y$pc_nuked$§!\n§Y$district_pd_aw_necro$§! modifier added.\nAllows construction of £district£ ['district:district_pd_aw_necro']\nRemoves and blocks construction of £district£ ['district:district_farming']"
+ decision_pd_aw_necro_planet: "Build Planetary Necropolis"
+ decision_pd_aw_necro_planet_desc: "This world yearns to become a sprawling temple that echos with the whispers of our legacy of eternal significance."
+ decision_pd_aw_necro_planet_effects_short: "§Y$district_pd_aw_necro$§! modifier added.\nConstruction of §Y$district_farming_plural$§! replaced with §G$district_pd_aw_necro_plural$§!"
+ decision_pd_aw_necro_planet_cleanup: "Remove Planetary Necropolis"
+ decision_pd_aw_necro_planet_cleanup_desc: "We must remove the temples and tombs left behind by this planet's previous owners."
+ decision_pd_aw_necro_planet_cleanup_effects_short: "§Y$pd_aw_necro_planet$§! modifier will be removed."
 
 #Modifiers
- pd_aw_necro_planet:0 "Necropolis"
- pd_aw_necro_planet_tooltip: "§GUnlocks Construction§!: £district£ ['district:district_pd_aw_necro']\n§RBlocks Construction§!: £district£ ['district:district_farming']\n£unity£ $unity$ from [GetAdministratorPluralWithIcon]: §G+0.5§!\n$MOD_PLANET_ORBITAL_BOMBARDMENT_DAMAGE$ §G-25%§!\n$MOD_POP_GROWTH_SPEED_REDUCTION$ §R10%§!"
- pd_aw_necro_planet_desc:0 "This world is a sprawling temple, its surface echos with the whispers of eternal significance."
+ pd_aw_necro_planet: "Necropolis"
+ pd_aw_necro_planet_tooltip: "§GUnlocks Construction§!: £district£ $district_pd_aw_necro_plural$\n§RBlocks Construction§!: £district£ $district_farming_plural$\n£unity£ $unity$ from [GetAdministratorPluralWithIcon]: §G+0.5§!\n$MOD_PLANET_ORBITAL_BOMBARDMENT_DAMAGE$ §G-25%§!\n$MOD_POP_GROWTH_SPEED_REDUCTION$ §R10%§!"
+ pd_aw_necro_planet_desc: "This world is a sprawling temple, its surface echos with the whispers of eternal significance."
+ pd_necro_planet: "$pd_aw_necro_planet$"
+ pd_necro_planet_desc: "$pd_aw_necro_planet_desc$"
+ pd_aw_necro_city_planet: "$pd_aw_necro_planet$"
+ pd_aw_necro_city_planet_desc: "$pd_aw_necro_planet_desc$"
+ pd_aw_necro_city_planet_tooltip: "£unity£ $unity$ from [GetAdministratorPluralWithIcon]: §G+0.5§!\n$MOD_PLANET_ORBITAL_BOMBARDMENT_DAMAGE$ §G-25%§!\n$MOD_POP_GROWTH_SPEED_REDUCTION$ §R10%§!"
 
 #Acension Perk
- ap_pd_necro_worlds:0 "Necro Worlds"
- ap_pd_necro_worlds_desc:0 "Our world yearn to become a sprawling temple that echos with the whispers of our legacy of eternal significance."
- allow_necro_worlds:0 "§HUnlocks Decision:§! $decision_pd_aw_necro_planet$"
- describe_necro_worlds:0 "$t$- Unlocks Construction: £district£ ['district:district_pd_aw_necro']\n$t$- Blocks Construction: £district£ ['district:district_farming']\n\nUnlocks the §YPlanet Necrosis Beam§! Colossus Weapon §R(requires §Y$ap_colossus$§! Ascension Perk)§!."
+ ap_pd_necro_worlds: "Necro Worlds"
+ ap_pd_necro_worlds_desc: "Our world yearn to become a sprawling temple that echos with the whispers of our legacy of eternal significance."
+ allow_necro_worlds: "§HUnlocks Decision:§! $decision_pd_aw_necro_planet$"
+ describe_necro_worlds: "Non-Urban Planets\n$t$- Unlocks Construction: £district£ ['district:district_pd_aw_necro']\n$t$- Blocks Construction: £district£ ['district:district_farming']\nRingworlds\n$t$- Unlocks Construction: £district£ ['district:district_rw_pd_aw_necro']\n$t$- Blocks Construction: £district£ ['district:district_rw_farming']\n\nUnlocks the §YPlanet Necrosis Beam§! Colossus Weapon §R(requires §Y$ap_colossus$§! Ascension Perk)§!."
 
 #Necropolis District
- district_pd_aw_necro:0 "Necropolis District"
- district_pd_aw_necro_plural:0 "Necropolis Districts"
- district_pd_aw_necro_desc:0 "A testament to our legacy, these spires may hold the key to our eternal significance."
+ district_pd_aw_necro: "Necropolis District"
+ district_pd_aw_necro_plural: "Necropolis Districts"
+ district_pd_aw_necro_desc: "A testament to our legacy, these spires hold the key to our eternal significance."
+ district_rw_pd_aw_necro: "Necropolis Segment"
+ district_rw_pd_aw_necro_desc: "A testament to our legacy, endless spires stretch across this Ring World section. They hold the key to our eternal significance."
+ district_rw_pd_aw_necro_plural: "Necropolis Segments"
 
 #Notification Message
  MESSAGE_PD_AW_NECRO_DESC:1 "$PLANET|Y$ is now a §Y$pd_aw_necro_planet$§."
- MESSAGE_PD_AW_NECRO_MESSAGE_TYPE_TITLE:0 "Planetary Necropolis Complete"
+ MESSAGE_PD_AW_NECRO_MESSAGE_TYPE_TITLE: "Planetary Necropolis Complete"
  MESSAGE_PD_AW_NECRO_CLEANUP_DESC:1 "The planetary Necropolis on $PLANET|Y$ as been removed."
- MESSAGE_PD_AW_NECRO_CLEANUP_MESSAGE_TYPE_TITLE:0 "Necropolis Removed"
+ MESSAGE_PD_AW_NECRO_CLEANUP_MESSAGE_TYPE_TITLE: "Necropolis Removed"
