--- a/planetary_diversity_ascension_worlds/localisation/planetarydiversity_aw_shroud_l_english.yml
+++ b/planetary_diversity_ascension_worlds/localisation/planetarydiversity_aw_shroud_l_english.yml
@@ -11,7 +11,7 @@
  decision_pd_aw_shroud_planet:0 "Shroud Phasing"
  decision_pd_aw_shroud_planet_desc:0 "We can weaken the barrier between this planet and the Shroud and create a balance between the material and psionic realms."
  decision_pd_aw_shroud_planet_effects_short: "§Y$pd_aw_shroud_planet$§! modifier added.\n\nIncreases £pop£ §GPsionic Pop Output§! but reduces £pop£ §YNon-Psionic Pop Output§!."
- decision_pd_aw_shroud_planet_cleanup: "Phase-Shift Planet"
+ decision_pd_aw_shroud_planet_cleanup: "Phase-Lock Planet"
  decision_pd_aw_shroud_planet_cleanup_desc: "Our physicists can strengthen the barrier between this planet and the Shroud, locking it in the material realm."
  decision_pd_aw_shroud_planet_cleanup_tooltip: "\nWe will remove the psionic influence from this planet."
 
