--- a/planetary_diversity_ascension_worlds/localisation/planetarydiversity_aw_necro_l_english.yml
+++ b/planetary_diversity_ascension_worlds/localisation/planetarydiversity_aw_necro_l_english.yml
@@ -77,3 +77,19 @@
  MESSAGE_PD_AW_NECRO_MESSAGE_TYPE_TITLE: "Planetary Necropolis Complete"
  MESSAGE_PD_AW_NECRO_CLEANUP_DESC:1 "The planetary Necropolis on $PLANET|Y$ as been removed."
  MESSAGE_PD_AW_NECRO_CLEANUP_MESSAGE_TYPE_TITLE: "Necropolis Removed"
+
+#Necro Planet Cracker
+ PLANET_KILLER_PD_NECRO_RAY:0 "Planet Necrosis Beam"
+ PLANET_KILLER_PD_NECRO_RAY_DESC:0 "A spectral tide of nanobots shall cascade upon this world, obliterating artificial constructs and robotics alike, and the higher functions of the living shall be silenced. In its wake, a Necropolis shall rise across the landscape."
+ PLANET_KILLER_PD_NECRO_RAY_ACTION:0 "Necromance"
+ FLEETORDER_DESTROY_PLANET_WITH_PLANET_KILLER_PD_NECRO_RAY:0 "Preparing to necromance $PLANET|Y$"
+ MESSAGE_DESC_FOR_PLANET_KILLER_PD_NECRO_RAY:0 "was subjected to a necrotic transformation by"
+ pd_necro_ray.02.name:0 "Planet Necromancy"
+ pd_necro_ray.02.desc:0 "As the column of nanobots descending from the [FromFrom.GetName] dissipates, the surface of [From.GetName] is wholly transformed. Now there is only a Necropolis."
+ pd_necro_ray.02.tooltip:0 "The planet becomes an §Y$pc_pd_necro$§!.\nAll Robot Pops will be destoryed and biological pops will gain the §Y$trait_zombie$§!."
+ is_not_necro:0 "§R$TRIGGER_FAIL$Target is already an §Y$pc_pd_necro$§!§!"
+ will_purge_robots_and_zombie:0 "§RRobotic Pops will be destroyed and biological pops will gain the §Y$trait_zombie$§!§!"
+ opinion_pd_necro_a_world:0 "Necromanced a World"
+ opinion_pd_necro_my_world:0 "Necromanced our World"
+ opinion_pd_necro_a_primitive_world:0 "Necromanced a Primitive World"
+ opinion_pd_necro_a_primitive_world_phile:0 "$opinion_cracked_a_primitive_world_phile$"
