updates to scripted triggers + necro beam

--- a/planetary_diversity_ascension_worlds/localisation/planetarydiversity_aw_necro_l_english.yml
+++ b/planetary_diversity_ascension_worlds/localisation/planetarydiversity_aw_necro_l_english.yml
@@ -80,7 +80,7 @@
 
 #Necro Planet Cracker
  PLANET_KILLER_PD_NECRO_RAY:0 "Planet Necrosis Beam"
- PLANET_KILLER_PD_NECRO_RAY_DESC:0 "A spectral tide of nanobots shall cascade upon this world, obliterating artificial constructs and robotics alike, and the higher functions of the living shall be silenced. In its wake, a Necropolis shall rise across the landscape."
+ PLANET_KILLER_PD_NECRO_RAY_DESC:0 "A spectral tide of nanobots shall cascade upon this world, obliterating robotics and silencing any higher functions of the living. In its wake, a Necropolis shall rise across the landscape."
  PLANET_KILLER_PD_NECRO_RAY_ACTION:0 "Necromance"
  FLEETORDER_DESTROY_PLANET_WITH_PLANET_KILLER_PD_NECRO_RAY:0 "Preparing to necromance $PLANET|Y$"
  MESSAGE_DESC_FOR_PLANET_KILLER_PD_NECRO_RAY:0 "was subjected to a necrotic transformation by"
