final bits for necro worlds

--- a/planetary_diversity_ascension_worlds/localisation/planetarydiversity_aw_necro_l_english.yml
+++ b/planetary_diversity_ascension_worlds/localisation/planetarydiversity_aw_necro_l_english.yml
@@ -73,7 +73,7 @@
  district_rw_pd_aw_necro_plural: "Necropolis Segments"
 
 #Notification Message
- MESSAGE_PD_AW_NECRO_DESC:1 "$PLANET|Y$ is now a §Y$pd_aw_necro_planet$§."
+ MESSAGE_PD_AW_NECRO_DESC:1 "$PLANET|Y$ is now a §Y$pd_aw_necro_planet$§!"
  MESSAGE_PD_AW_NECRO_MESSAGE_TYPE_TITLE: "Planetary Necropolis Complete"
  MESSAGE_PD_AW_NECRO_CLEANUP_DESC:1 "The planetary Necropolis on $PLANET|Y$ as been removed."
  MESSAGE_PD_AW_NECRO_CLEANUP_MESSAGE_TYPE_TITLE: "Necropolis Removed"
