--- a/planetary_diversity_ascension_worlds/localisation/planetarydiversity_aw_shroud_l_english.yml
+++ b/planetary_diversity_ascension_worlds/localisation/planetarydiversity_aw_shroud_l_english.yml
@@ -24,7 +24,7 @@
  pd_shroud_planet_tooltip: "$pd_aw_shroud_planet_tooltip$"
 
 #Notification Message
- MESSAGE_PD_AW_SHROUD_DESC:1 "$PLANET|Y$ is now §Y$pd_aw_shroud_planet$§."
+ MESSAGE_PD_AW_SHROUD_DESC:1 "$PLANET|Y$ is now §Y$pd_aw_shroud_planet$§!"
  MESSAGE_PD_AW_SHROUD_MESSAGE_TYPE_TITLE:0 "Planetary Shroud Communion Complete"
  MESSAGE_PD_AW_SHROUD_CLEANUP_DESC:1 "The influence of the Shourd has been removed on $PLANET|Y$."
  MESSAGE_PD_AW_SHROUD_CLEANUP_MESSAGE_TYPE_TITLE:0 "Planet Unshrouded"
