--- a/planetary_diversity_ascension_worlds/localisation/planetarydiversity_aw_wasteland_l_english copy.yml
+++ b/planetary_diversity_ascension_worlds/localisation/planetarydiversity_aw_wasteland_l_english copy.yml
@@ -24,7 +24,7 @@
  pd_wasteland_planet_tooltip: "$pd_aw_wasteland_planet_tooltip$"
 
 #Notification Message
- MESSAGE_PD_AW_WASTELAND_DESC:1 "$PLANET|Y$ now has §Y$decision_pd_aw_wasteland_planet$§."
+ MESSAGE_PD_AW_WASTELAND_DESC:1 "$PLANET|Y$ now has §Y$decision_pd_aw_wasteland_planet$§!"
  MESSAGE_PD_AW_WASTELAND_MESSAGE_TYPE_TITLE:0 "Environmental Regulations Abolished"
  MESSAGE_PD_AW_WASTELAND_CLEANUP_DESC:1 "The ecosystem on $PLANET|Y$ has been repaired."
  MESSAGE_PD_AW_WASTELAND_CLEANUP_MESSAGE_TYPE_TITLE:0 "Environmental Regulations Returned"
