Beta compat with AW

--- a/planetary_diversity_ascension_worlds/localisation/planetarydiversity_aw_lithoid_l_english.yml
+++ b/planetary_diversity_ascension_worlds/localisation/planetarydiversity_aw_lithoid_l_english.yml
@@ -16,11 +16,11 @@
 
 #Modifiers
  pd_aw_lithoid_planet_cyan: "Lithotrophic World"
- pd_aw_lithoid_planet_cyan_desc: "Frequency: 500 nm\nThe resonating vibrations foster unity within Lithoids, and catalyze an accelerated growth rate."
+ pd_aw_lithoid_planet_cyan_desc: "Frequency: 500 nm\nThe resonating vibrations foster goodwill and catalyze an accelerated growth rate for Lithoids."
  pd_aw_lithoid_planet_red: "Lithotrophic World"
- pd_aw_lithoid_planet_red_desc: "Frequency: 650 nm\nThe robust crystalline resonance synergizes seamlessly with mineral deposits, rendering them more accessible and ripe for extraction."
+ pd_aw_lithoid_planet_red_desc: "Frequency: 650 nm\nThe robust crystalline resonance synergizes seamlessly with mineral deposits, rendering them more accessible for extraction."
  pd_aw_lithoid_planet_yellow: "Lithotrophic World"
- pd_aw_lithoid_planet_yellow_desc: "Frequency: 580 nm\nThe dynamic harmonics of this crystalline resonance seamlessly integrate with our power networks, unlocking a surge in their total capacity."
+ pd_aw_lithoid_planet_yellow_desc: "Frequency: 580 nm\nThe dynamic harmonics of this crystalline resonance seamlessly integrate with our power networks, unlocking their total capacity."
 
 #Acension Perk
  ap_pd_lithoid_worlds: "Lithotrophic Worlds"
@@ -35,14 +35,14 @@
  MESSAGE_PD_AW_LITHOID_CLEANUP_MESSAGE_TYPE_TITLE: "Lithotrophic Biome Removed"
 
 #Choose Event
- pdlithoidplanets.100.name: "Crystalline Frequency"
- pdlithoidplanets.100.desc: "What resonant frequency shall we attune the lithotrophic biome on §Y[This.GetName]§!?"
- pdlithoidplanets.100.cyan: "Cyan"
- pdlithoidplanets.100.cyan.tooltip: "This resonating frequency acts as a cohesive force, fostering unity among our lithoid populace and nurturing a harmonious surge in population growth."
- pdlithoidplanets.100.red: "Red"
- pdlithoidplanets.100.red.tooltip: "This resonance synergizes seamlessly with mineral deposits, rendering them more accessible and ripe for extraction.""
- pdlithoidplanets.100.yellow: "Yellow"
- pdlithoidplanets.100.yellow.tooltip: "This resonating frequency seamlessly integrates with our power networks, unlocking a surge in their total capacity."
+ pdawlithoidplanets.100.name: "Crystalline Frequency"
+ pdawlithoidplanets.100.desc: "What resonant frequency shall we attune the lithotrophic biome on §Y[This.GetName]§!?"
+ pdawlithoidplanets.100.cyan: "Cyan"
+ pdawlithoidplanets.100.cyan.tooltip: "This resonating frequency acts as a cohesive force, fostering unity among our lithoid populace and nurturing a harmonious surge in population growth."
+ pdawlithoidplanets.100.red: "Red"
+ pdawlithoidplanets.100.red.tooltip: "This resonance synergizes seamlessly with mineral deposits, rendering them more accessible and ripe for extraction.""
+ pdawlithoidplanets.100.yellow: "Yellow"
+ pdawlithoidplanets.100.yellow.tooltip: "This resonating frequency seamlessly integrates with our power networks, unlocking a surge in their total capacity."
 
 #Dummy Classes
  pc_pd_lithoid_cyan: "$DO_NOT_USE$"
