playtest fixes for lithoids

--- a/planetary_diversity_ascension_worlds/localisation/planetarydiversity_aw_lithoid_l_english.yml
+++ b/planetary_diversity_ascension_worlds/localisation/planetarydiversity_aw_lithoid_l_english.yml
@@ -26,7 +26,7 @@
  ap_pd_lithoid_worlds: "Lithotrophic Worlds"
  ap_pd_lithoid_worlds_desc: "We will sculpt our worlds into unyielding lithotrophic paradises, forging a bedrock of eternal stability."
  allow_lithoid_worlds: "§HUnlocks Decision:§! $decision_pd_aw_lithoid_planet$"
- describe_lithoid_worlds: "TODO\nDifferent bonuses from different crystal frequencies\n$MOD_LITHOID_POP_HAPPINESS$: §GYES§!\n$mod_LITHOID_pop_growth_speed$: §GYES§!\n\n$MOD_BIOLOGICAL_POP_HAPPINESS$: §RBAD§!\n$mod_BIOLOGICAL_pop_growth_speed_reduction$: §RBAD§!"
+ describe_lithoid_worlds: "§YLithotrophic Worlds§! are a special planet class with lithotrophic based ecosystems, which allows for frequency tuning of large crystal structure which can improve $i_unity$, $i_minerals$ or $i_energy$.\n$MOD_LITHOID_POP_HAPPINESS$: §G25%§!\n$mod_LITHOID_pop_growth_speed$: §G20%§!\n$MOD_BIOLOGICAL_POP_HAPPINESS$: §R-50%§!\n$mod_BIOLOGICAL_pop_growth_speed_reduction$: §R-50%§!"
 
 #Notification Message
  MESSAGE_PD_AW_LITHOID_DESC:1 "$PLANET|Y$ is now a §YLithotrophic World§!"
