--- a/planetary_diversity_ascension_worlds/localisation/planetarydiversity_aw_planetary_infesters_l_english.yml
+++ b/planetary_diversity_ascension_worlds/localisation/planetarydiversity_aw_planetary_infesters_l_english.yml
@@ -7,14 +7,14 @@
  civic_tooltip_pd_planetary_infesters_effects: "Can build £building£ $building_pd_planet_infester_1$\n- $building_pd_planet_infestor_desc$\n- Homeworld is a $pc_hive$"
 
 #Buildings
- building_pd_planet_infestor_desc: "§YInfesting Nodes§! spread across the planet progressively turning it into a §YHive World§!, through 3 upgrade phases."
- building_pd_planet_infester_1: "First Phase Infestation Node"
- building_pd_planet_infester_1_desc: "This massive node is the initial infestation stage, demanding the collective effort and focus of the entire colony. As it spreads, it will overwhelm and integrate the local ecosystem."
- building_pd_planet_infester_2: "Second Phase Infestation Node"
- building_pd_planet_infester_2_desc: "This massive node, now in the intermediate infestation stage, wields a connection to the hive robust enough to manipulate critical planetary processes."
+ building_pd_planet_infestor_desc: "§YInfesting Nodes§! evolve through three upgrade phases, progressively converting the planet into a §YHive World§!."
+ building_pd_planet_infester_1: "Infestation Node - First Phase"
+ building_pd_planet_infester_1_desc: "This node, the heart of the initial infestation stage, is vital to the hive's presence on this planet. Its loss would unravel the hive's grip here."
+ building_pd_planet_infester_2: "Infestation Node - Second Phase"
+ building_pd_planet_infester_2_desc: "This massive node, now in the intermediate infestation stage, wields a connection to the hive robust enough to manipulate critical planetary processes. Its loss would unravel the hive's grip here."
  building_pd_planet_infester_3: "Planetary Infestation Node"
- building_pd_planet_infester_3_desc: "Having reached its zenith, this formidable node exerts total dominion over all planetary processes."
- building_pd_planet_infester_3_effect_desc: "This planet will become a §Y$pc_hive$§!."
+ building_pd_planet_infester_3_desc: "Having reached its zenith, this formidable node exerts total dominion over all planetary processes. Its loss would unravel the hive's grip here."
+ building_pd_planet_infester_3_effect_desc: "This planet will be transformed into a §Y$pc_hive$§!."
 
 #Dummy Class
  pc_hive_dummy: "$pc_hive$"
@@ -26,5 +26,5 @@
 
 #Events
  pdplanetaryinfesters.120.name: "Planetary Hive Complete"
- pdplanetaryinfesters.120.desc: "As the node reaches its full potential, we resonate with a profound sense of accomplishment.\n\nThis moment marks a significant leap in the hive's capability, solidifying its grasp over the planet."
- pdplanetaryinfesters.120.a: "Another nest for the hive."
+ pdplanetaryinfesters.120.desc: "As the node reaches its full potential, we resonate with a profound sense of accomplishment.\n\nThis moment marks a significant leap in the hive's conrol of [Root.GetName], solidifying its grasp over the planet."
+ pdplanetaryinfesters.120.a: "Another home for the hive."
